# addax

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  example_data.csv  make.bat
src/addax/: __init__.py  addax.py
tests/: test_addax.py
