[tool.poetry]
name = "addax"
version = "0.1.0"
description = "Database abstraction library"
authors = ["Dalia Tavizon-Dykstra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
